<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
    <item android:id="@+id/nav_home" android:title="@string/mainScreen" android:icon="@drawable/ic_home_black_24dp"/>
    <item android:id="@+id/nav_personalInfor" android:title="@string/personInformation" android:icon="@drawable/ic_person_black_24dp"/>
    <item android:id="@+id/nav_medicalInfo" android:title="@string/medicalmanager" android:icon="@drawable/ic_medical"/>
    <item android:id="@+id/findmedicalcenter" android:title="@string/findmedicalcenter" android:icon="@drawable/bloodtype"/>
    <item android:id="@+id/finddisease" android:title="@string/populadisease" android:icon="@drawable/ic_sick"/>
    <item android:id="@+id/setting" android:title="@string/setting" android:icon="@drawable/ic_settings_black_24dp"/>
    </group>
    <item android:id="@+id/logout" android:title="@string/logout" android:icon="@drawable/ic_logout"/>

</menu>